2009-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c common-src/conffile.h perl/Amanda/Config.swg:
	  change PP_SCRIPT to SCRIPT, to match the name of the config param
	* server-src/diskfile.c installcheck/Amanda_Config.pl:
	  use new symbols

2009-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Config.pl: installchecks for nested pp_scripts
	  and applications

2009-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c common-src/conffile.h: use a simple
	  identlist_t for pp_scripts
	* server-src/amadmin.c server-src/diskfile.c server-src/diskfile.h
	  server-src/server_util.c: use identlist_t's

2009-02-18  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Config.swg: perl bindings

2009-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c common-src/conffile.h: Change
	  DUMPTYPE_APPLICATION to give a string val_t; remove the
	  pointer-to-application val_t subtype; also fix many
	  memory leaks and simplify memory management
	* server-src/amadmin.c server-src/amcheck.c server-src/amindexd.c
	  server-src/diskfile.c server-src/diskfile.h server-src/driverio.c
	  server-src/planner.c: use new val_t result correctly

2009-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Do dle check without disk.
	* common-src/amxml.c: Accept a dle without a disk.
	* perl/Amanda/Application/Zfs.pm, application-src/amgtar.c,
	  application-src/amgtar_perl.pl,
	  application-src/amsamba.pl, application-src/amstar.c,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl: Do minimal test in selfcheck if
	                                     a disk is not provided.

2009-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	patch by glowkrantz
	* application-src/amzfs-sendrecv.pl: Use compression ratio for
	                                     compressed filesystem.

2009-02-18  Jean-Louis Martineau <martineau@zmanda.com>